Added Part 3 question 1

--- a/Assignment 1/Part 3.ipynb
+++ b/Assignment 1/Part 3.ipynb
@@ -13,14 +13,72 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Question 1"
+    "## Question 1\n",
+    "\n",
+    "Black-Scholes formula:\n",
+    "\\begin{align*}\n",
+    "    C_t &= S_tN(d_1) - e^{-rτ}KN(d_2)\n",
+    "\\end{align*}\n",
+    "where\n",
+    "\\begin{align*}\n",
+    "    d_1 &= \\frac{\\text{log}\\bigl(\\frac{S_t}{K}\\bigr) + \\bigl(r + \\frac{1}{2}σ^2\\bigr)τ}{σ\\sqrt{τ}} \\\\\n",
+    "    d_2 &= d_1 - σ\\sqrt{τ}\n",
+    "\\end{align*}\n",
+    "\n",
+    "We are looking to find $\\frac{∂C_t}{∂S_t}$. For this, we first derive:\n",
+    "\\begin{align*}\n",
+    "    \\frac{∂d_1}{∂S_t} &= \\frac{∂}{∂S_t}\\biggl(\\frac{1}{σ\\sqrt{τ}}\\text{log}\\biggl(\\frac{S_t}{K}\\biggr)\\biggr) \\\\\n",
+    "    &= \\frac{1}{σ\\sqrt{τ}}\\biggl(\\frac{∂}{∂S_t}\\biggl(\\text{log}(S_t) - \\text{log}(K)\\biggr)\\biggr) \\\\\n",
+    "    &= \\frac{1}{σ\\sqrt{τ}}\\biggl(\\frac{∂}{∂S_t}\\text{log}(S_t)\\biggr) \\\\\n",
+    "    &= \\frac{1}{σ\\sqrt{τ}} \\frac{1}{S_t} \\\\\n",
+    "    &= \\frac{1}{S_tσ\\sqrt{τ}}\n",
+    "\\end{align*}\n",
+    "\n",
+    "With the second term of $d_2$ containing no $S_t$, we can state:\n",
+    "\n",
+    "\\begin{equation*}\n",
+    "    \\frac{∂d_1}{∂S_t} = \\frac{∂d_2}{∂S_t} = \\frac{1}{S_tσ\\sqrt{τ}}\n",
+    "\\end{equation*}\n",
+    "\n",
+    "The first part of differentiating the Black Scholes formula (with $n(x)$ the standard normal pdf):\n",
+    "\n",
+    "\\begin{align*}\n",
+    "    \\frac{∂C_t}{∂S_t} &= S_t \\frac{∂}{∂S_t} N(d_1) + N(d_1) \\frac{∂S_t}{∂S_t} - e^{-rτ}K \\frac{∂}{∂S_t} N(d_2) & \\text{(productrule)}\\\\\n",
+    "    &= N(d_1) + S_t n(d_1) \\frac{∂d_1}{∂S_t} - e^{-rτ}K n(d_2) \\frac{∂d_2}{∂S_t} & \\text{(chainrule)}\\\\\n",
+    "    &= N(d_1) + \\frac{n(d_1)}{σ\\sqrt{τ}} \\biggl( 1 - \\frac{n(d_2)}{n(d_1)} \\frac{K}{e^{rτ}} \\frac{σ\\sqrt{τ}}{S_tσ\\sqrt{τ}} \\biggr) & \\text{(use $\\frac{∂d_1}{∂S_t}$ and $\\frac{∂d_2}{∂S_t}$)} \\\\\n",
+    "    &= N(d_1) + \\frac{n(d_1)}{σ\\sqrt{τ}} \\biggl( 1 - \\frac{n(d_2)}{n(d_1)} \\frac{K}{S_te^{rτ}} \\biggr) & \\text{(simplify)}\n",
+    "\\end{align*}\n",
+    "\n",
+    "To continue, we first derive $d_1^2 - d_2^2$ and with that $\\frac{n(d_2)}{n(d_1)}$:\n",
+    "\n",
+    "\\begin{align*}\n",
+    "    d_1^2 - d_2^2 &= d_1^2 - (d_1 - σ\\sqrt{τ})^2 \\\\\n",
+    "    &= d_1^2 - d_1^2 + 2 d_1 σ\\sqrt{τ} - (σ\\sqrt{τ})^2 \\\\\n",
+    "    &= 2 d_1 σ\\sqrt{τ} - σ^2τ \\\\\n",
+    "    &= 2 \\biggl[ \\text{log}\\biggl(\\frac{S_t}{K}\\biggr) + (r + \\frac{1}{2}σ^2)τ \\biggr] - σ^2τ \\\\\n",
+    "    &= 2 \\biggl[ \\text{log}\\biggl(\\frac{S_t}{K}\\biggr) + rτ \\biggr] \\\\\n",
+    "    &= 2 \\text{log}\\biggl(\\frac{S_te^{rτ}}{K}\\biggr) \\\\\n",
+    "\n",
+    "    \\frac{n(d_2)}{n(d_1)} &= \\frac{ \\frac{1}{\\sqrt{2\\pi}} e^{-\\frac{1}{2}d_2^2} }{\\frac{1}{\\sqrt{2\\pi}} e^{-\\frac{1}{2}d_1^2}} \\\\\n",
+    "    &= e^{(d_1^2-d_2^2)/2} \\\\\n",
+    "    &= \\frac{S_te^{rτ}}{K}\n",
+    "\\end{align*}\n",
+    "\n",
+    "With this, the derivative becomes:\n",
+    "\\begin{align*}\n",
+    "    \\frac{∂C_t}{∂S_t} &= N(d_1) + \\frac{n(d_1)}{σ\\sqrt{τ}} \\biggl( 1 - \\frac{S_te^{rτ}}{K} \\frac{K}{S_te^{rτ}} \\biggr) & \\text{(plug $\\frac{n(d_2)}{n(d_1)}$ in)} \\\\\n",
+    "    &= N(d_1) + \\frac{n(d_1)}{σ\\sqrt{τ}} (1 - 1) \\\\\n",
+    "    &= N(d_1)\n",
+    "\\end{align*}\n",
+    "\n",
+    "We have proven that $\\Delta_t := \\frac{∂C_t}{∂S_t}$ means that $\\Delta_t = N(d_1)$.\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Question 3\n",
+    "## Question 3\n",
     "\n",
     "1. Use the Euler method to perform a hedging simulation. Do an experiment where the volatility in the stock price process is matching the volatility used in the delta computation (set both equal to 20%).\n",
     "\n",
